--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   google_maps_flutter: ^2.5.1
   geolocator: ^10.1.0
   geocoding: ^2.1.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
