--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   geolocator: ^10.1.0
   geocoding: ^2.1.1
   image_picker: ^1.0.7
+  pull_to_refresh: ^2.0.0
+  flutter_widget_from_html: ^0.14.11
+#  flutter_html: ^2.2.1
 
 dev_dependencies:
   flutter_test:
